--- a/styles/fusions.css
+++ b/styles/fusions.css
@@ -136,7 +136,7 @@
 }
 /* Variable Definitions */
 .pf2e-fusions {
-  --yol-indigo: #5e0000;
+  --yol-indigo: #610900;
   --yol-indigo-dark: #25271c;
   --yol-indigo-light: #f1f2df;
   --paizo-blue-light: #7c7bab;
